--- a/tadoba-react/src/App.css
+++ b/tadoba-react/src/App.css
@@ -529,8 +529,8 @@ color: #ffffff;
 border: 1px solid gray;
 }
 .payable {
-width: 200px;
-height: 50px;
+width: 235px;
+height: 47px;
 background-color: #00053a;
 padding: 12px;
 border-radius: 10px;
@@ -538,6 +538,11 @@ color: #fff;
 border: none;
 font-weight: 500;
 text-align: center;
+border: 1px solid #00053a;
+}
+.payable:hover {
+    color: #00053a;
+    background: transparent;
 }
 .bookingtable {
 background-color: #cbccce;
