--- a/tadoba-react/src/App.css
+++ b/tadoba-react/src/App.css
@@ -559,14 +559,13 @@ margin-bottom: 0px;
 }
 .hotelback {
 background-color: #575757;
-height: 85px;
+height: auto;
 width: 100%;
 }
 .boxx {
 height: 65px;
 background-color: #fcfcfc;
 border-radius: 10px;
-margin-top: 5px;
 padding: 5px;
 }
 
@@ -660,13 +659,10 @@ margin-bottom: 3px;
 margin-bottom: 0px;
 }
 .tourPackage1 {
-padding: 10px;
 box-shadow: 0 0 10px #e3ecff;
 border-radius: 5px;
 margin: 10px 0px;
 background-color: #fff;
-<<<<<<< HEAD
-=======
 }
 .hotelTourPackages {
 display: flex;
@@ -690,4 +686,532 @@ s {
 font-weight: 500;
 color: #6e0f0f;
 }
->>>>>>> 64da153e (tour package changes)
+
+.hotelDetailDiscription {
+display: flex;
+border: 2px solid rgb(219, 217, 217);
+padding: 15px;
+}
+
+.imgHotelDetail {
+height: 150px;
+width: 300px;
+border-radius: 10px;
+margin-top: 15px;
+}
+.hotelTadobaDetail {
+border-radius: 10px;
+height: 150px;
+width: 300px;
+}
+
+
+.tableborder {
+border: 2px solid rgb(219, 217, 217);
+border-radius: 10px;
+}
+
+.availableRoom {
+border: 2px solid rgb(219, 217, 217);
+padding: 15px;
+}
+
+.facilities {
+display: flex;
+justify-content: space-between;
+}
+
+iframe {
+width: 100%;
+height: 300px;
+}
+
+.checkinout {
+padding-left: 20px;
+}
+
+select {
+width: 100%;
+}
+
+.card {
+width: 20rem;
+}
+
+.day1package {
+width: 420px;
+height: 250px;
+border-radius: 10px;
+}
+
+.day1Tadoba {
+display: flex;
+justify-content: space-between;
+}
+
+.day1Border {
+border: 2px solid rgb(219, 217, 217);
+padding: 10px;
+}
+
+.day1Tadoba p {
+width: 650px;
+}
+
+.delux {
+width: 170px;
+background-color: #cccdcf;
+text-align: center;
+font-size: 20px;
+border-radius: 10px;
+padding: 5px;
+}
+
+.hotelTourPackages {
+display: flex;
+border: 2px solid rgb(223, 219, 219);
+border-radius: 10px;
+padding: 10px;
+height: 270px;
+}
+
+
+.selector {
+width: 200px;
+height: 200px;
+display: grid;
+}
+
+.routeChart {
+background-color: #ecf4fc;
+width: 100%;
+height: 230px;
+padding: 20px;
+}
+
+.jeepSafari {
+display: flex;
+justify-content: space-around;
+background-color: #eff0f0;
+padding: 20px;
+margin-top: 20px;
+}
+
+.bookingImgBanner {
+width: 100%;
+height: 300px;
+}
+
+.tourBooking {
+width: 100%;
+border-radius: 10px;
+border: 1px solid rgb(238, 236, 236);
+background-color: #ffffff;
+padding: 0px 20px;
+}
+
+.booking {
+background-color: #f1f1f1;
+}
+
+.checkInRow {
+background-color: #e5ebeb;
+padding: 20px;
+border-radius: 10px;
+}
+
+.country {
+width: 300px;
+border: 1px solid rgb(221, 218, 218);
+}
+
+.inputField {
+width: 300px;
+height: 40px;
+border: 1px solid rgb(221, 218, 218);
+
+}
+
+label {
+padding: 20px 0px 10px 0px;
+}
+
+.travellerDetail {
+width: 100%;
+background-color: #ffffff;
+padding: 20px;
+margin-top: 20px;
+border-radius: 10px;
+}
+
+.travellerDetail1 {
+width: 100%;
+background-color: #ffffff;
+border-radius: 10px;
+}
+
+.specialRequest {
+width: 100%;
+height: 100px;
+border: 1px solid rgb(248, 247, 247);
+padding: 10px;
+}
+
+.billing {
+display: flex;
+justify-content: space-between;
+
+}
+
+.billingBox {
+width: 95%;
+padding: 0px 40px;
+}
+
+.paymentOptions {
+display: flex;
+justify-content: space-between;
+}
+
+.payment {
+width: 100%;
+padding: 20px 40px;
+background-color: #ffffff;
+border-radius: 10px;
+height: 400px;
+}
+
+.travellerDetail1 p {
+margin: 0px;
+}
+
+hr {
+margin-top: 8px;
+}
+
+.paymentOptions p,
+button {
+padding: 10px;
+}
+
+.card-img-top {
+height: 200px;
+}
+
+.card-body {
+height: 155px;
+}
+
+.lonavalaImg {
+width: 100%;
+height: 300px;
+margin-top: 30px;
+margin-left: 20px;
+border-radius: 10px;
+}
+
+.blogComment {
+color: #5b5c5c;
+}
+
+.addressBox {
+width: 90%;
+height: 30rem;
+border-radius: 10px;
+background-color: #e0dddd;
+padding-top: 50px;
+padding-left: 50px;
+
+}
+
+.contactUs {
+border: 1px solid rgb(66, 65, 65);
+border-radius: 10px;
+padding-top: 30px;
+padding-left: 70px;
+}
+
+.contactInput {
+width: 25rem;
+height: 50px;
+border-radius: 10px;
+padding: 10px;
+margin: 10px;
+}
+
+.contactarea {
+width: 25rem;
+height: 5rem;
+border-radius: 10px;
+padding: 10px;
+margin: 10px;
+}
+
+.safaritable .container {
+max-width: 1220px;
+}
+
+.optionValue {
+width: 15rem;
+height: 50px;
+border: 1px solid rgb(206, 202, 202);
+padding: 10px;
+margin: 5px;
+border-radius: 10px;
+}
+
+.calenderForm {
+background-color: #5b5c5c;
+width: 100%;
+height: 350px;
+padding: 10px;
+border-radius: 10px;
+margin-left: 20px;
+}
+
+.btnbooking {
+width: 100%;
+height: 50px;
+background-color: #006edc;
+color: #ffffff;
+border-radius: 10px;
+}
+
+.bgImageZone {
+background-image: url("./assets/images/zoneForest.jpg");
+padding: 20px;
+height: 30rem;
+border-radius: 10px;
+}
+
+.text-zones {
+width: 39rem;
+height: 27rem;
+border-radius: 10px;
+background-color: white;
+opacity: 70%;
+}
+
+.travellerHeader {
+width: 100%;
+height: 100px;
+text-align: center;
+padding: 20px;
+background-color: #5b5c5c;
+color: #ffffff;
+}
+
+.safaridatetime {
+height: 30px;
+width: 100%;
+background-color: #89e2e2;
+}
+
+.details,
+select {
+border: 1px solid rgb(170, 168, 168);
+padding: 6px;
+border-radius: 5px;
+
+}
+
+.detail,
+input {
+border: 1px solid rgb(170, 168, 168);
+padding: 6px;
+border-radius: 5px;
+}
+
+.payable {
+width: 200px;
+height: 50px;
+background-color: #006edc;
+padding: 12px;
+border-radius: 10px;
+color: #ffffff;
+font-weight: 500;
+}
+
+.bookingtable {
+background-color: #cbccce;
+}
+
+.travellerBorder {
+border: 1px solid gray;
+}
+
+.tourPackage1 {
+position: relative;
+width: 100%;
+max-width: 500px;
+}
+
+.tourPackage1 .overlay {
+opacity: 1;
+}
+
+.tourPackage2 {
+display: block;
+width: 100%;
+height: 250px;
+border-radius: 5px;
+box-shadow: 0 0 8px 0px #f2f2f2;
+}
+
+.tourOverlay {
+position: absolute;
+bottom: 0;
+background: rgb(0, 0, 0);
+background: rgb(236 236 236 / 90%);
+color: #f1f1f1;
+width: 100%;
+height: 100%;
+transition: .5s ease;
+opacity: 1;
+color: #292929;
+font-size: 20px;
+padding: 20px;
+border-radius: 5px;
+border-bottom: 4px solid #001938;
+}
+
+.tourOverlay p {
+font-size: 16px;
+text-align: justify;
+}
+
+.tourOverlay button {
+color: #fff;
+background-color: #001938;
+padding: 5px 25px;
+border: none;
+}
+
+.packagelisting .col-sm-12,
+.col-md-3,
+.col-lg-3,.col-lg-2 {
+padding: 10px;
+}
+
+.paymentHead {
+background-color: #cacccc;
+width: 100%;
+height: 80px;
+padding: 10px;
+margin-top: 10px;
+text-align: center;
+}
+
+.paymentinput input {
+width: 400px;
+}
+
+.paymentbox {
+height: auto;
+width: 100%;
+border: 1px solid rgb(211, 210, 210);
+padding: 20px;
+box-shadow: 1px 1px 1px 1px rgb(189, 189, 189);
+}
+
+.paymentbox h4 {
+text-align: center;
+}
+
+.links {
+color: #000000;
+text-decoration: none;
+font-weight: 400;
+}
+
+.linksFooter {
+color: #ffffff;
+text-decoration: none;
+font-weight: 400;
+}
+
+.popupBox {
+width: auto;
+height: auto;
+background-color: #f1f1f1;
+border: 1px solid #f1f1f1;
+padding: 10px;
+}
+.popupbutton{
+border: none;
+background-color: #fff;
+color: rgb(0, 156, 78);
+font-weight: 500;
+}
+
+.popupBox1 {
+width: auto;
+height: auto;
+background-color: #f1f1f1;
+border: 1px solid #f1f1f1;
+padding: 10px;
+}
+.popupbutton1{
+border: none;
+background-color: #fff;
+color: rgb(10, 14, 20);
+}
+.background{
+background-color: #000;
+}
+.hotelTourPackages h4 {
+margin: 0;
+padding: 5px 0px;
+}
+.hotelTourPackages p
+{
+    margin-bottom: 5px;
+}
+.hotelTourPackages ul
+{
+    margin-bottom: 5px;
+}
+
+.hotelpagefilter .boxx {
+height: unset;
+background-color: #fcfcfc;
+border-radius: 10px;
+padding: 5px;
+}
+.hotelpagefilter .react-datepicker-wrapper
+{
+    width: 50%;
+}
+.allhoteldes {
+    background-color: #ffffffba;
+}
+.allhoteldes p {
+margin-bottom: 5px !important;
+}
+.allhoteldes h4 {
+margin: 0;
+padding: 5px 0px;
+}
+.allhoteldes p
+{
+    margin-bottom: 5px;
+}
+.allhoteldes ul
+{
+    margin-bottom: 5px;
+}
+.allhoteldes h5 a {
+text-decoration: none;
+color: #090266;
+}
+.hotelpagefilter .boxxSearch a {
+color: #fff;
+text-decoration: none;
+}
+.hotelrightdiv
+{
+    background-color: #cbc8de3b;
+}
+.hotelrightdiv p span {
+font-weight: 500;
+}
