--- a/tadoba-react/src/App.css
+++ b/tadoba-react/src/App.css
@@ -601,7 +601,7 @@ font-weight: 600;
 .filterBar {
 background-color: #f3f7ff;
 width: 250px;
-height: 86rem;
+height: auto;
 border: 2px solid rgb(223, 219, 219);
 border-radius: 10px;
 padding: 10px;
