--- a/tadoba-react/src/App.css
+++ b/tadoba-react/src/App.css
@@ -718,7 +718,26 @@ padding: 15px;
 display: flex;
 justify-content: space-between;
 }
-
+.facility-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Facilities ke beech ka gap badhane ke liye */
+  }
+  
+  .facility-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px; /* Row ke andar spacing theek karne ke liye */
+  }
+  
+  .facility-item {
+    display: flex;
+    align-items: center;
+    gap: 5px; /* Icon aur text ke beech ka gap */
+    width: 200px;
+    white-space: nowrap; /* Taaki facilities wrap na ho aur alignment theek rahe */
+  }
+  
 iframe {
 width: 100%;
 height: 300px;
