--- a/tadoba-react/src/custom.scss
+++ b/tadoba-react/src/custom.scss
@@ -1,4 +1,8 @@
 @import 'bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+body{
+    font-family: "Poppins", sans-serif !important;
+}
 .row {
     --bs-gutter-x: 0;
     padding: 0px;
@@ -7,6 +11,7 @@ p{
     font-size: 14px;
     color: #565656;
     margin-bottom: 10px !important;
+    line-height: 28px !important;
 }
 h1 {
 font-size: 35px;
@@ -110,15 +115,17 @@ padding-bottom: 5px;
   height: 300px;
 }
 td {
-font-size: 14px;
+font-size: 12px;
 color: #000000;
+font-family: "Poppins", sans-serif !important;
 }
     // td:hover{
     //     color:#565656;
     // }
 th {
-font-size: 14px;
+font-size: 12px;
 color: #565656;
+font-family: "Poppins", sans-serif !important;
 }
 input {
 font-size: 14px;
