--- a/tadoba-react/src/custom.scss
+++ b/tadoba-react/src/custom.scss
@@ -1,80 +1,80 @@
-@import 'bootstrap/scss/bootstrap';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-body{
-    font-family: "Poppins", sans-serif !important;
-}
-.row {
-    --bs-gutter-x: 0;
-    padding: 0px;
-}
-p{
-    font-size: 14px;
-    color: #565656;
-    margin-bottom: 10px !important;
-    line-height: 28px !important;
-}
-h1 {
-font-size: 35px;
-color: #141414dd;
-margin-top: 0px;
-margin-bottom: 0px;
-padding-top: 10px;
-padding-bottom: 5px;
-
-}
-h2 {
-font-size: 35px;
-color: #141414dd;
-margin-top: 0px;
-margin-bottom: 0px;
-padding-top: 10px;
-padding-bottom: 5px;
-}
-h3 {
-font-size: 30px;
-color: #141414dd;
-margin-top: 0px;
-margin-bottom: 0px;
-padding-top: 10px;
-padding-bottom: 5px;
-}
-h4 {
-font-size: 26px;
-color: #141414dd;
-margin-top: 0px;
-margin-bottom: 0px;
-padding-top: 10px;
-padding-bottom: 5px;
-}
-h5 {
-font-size: 24px;
-color: #141414dd;
-margin-top: 0px;
-margin-bottom: 0px;
-padding-top: 10px;
-padding-bottom: 5px;
-}
-h6 {
-font-size: 20px;
-color: #141414dd;
-margin-top: 0px;
-margin-bottom: 0px;
-padding-top: 10px;
-padding-bottom: 5px;
-}
-// .section {
-// // padding: 30px 0px;
+// @import 'bootstrap/scss/bootstrap';
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+// body{
+//     font-family: "Poppins", sans-serif !important;
 // }
-li {
-    font-size: 14px;
-    color: #565656;
-    margin-bottom: 5px;
-    line-height: 1.3;
-}
-ol, ul {
-    padding-left: 1rem;
-    margin-bottom: 5px;
-}
+// .row {
+//     --bs-gutter-x: 0;
+//     padding: 0px;
+// }
+// p{
+//     font-size: 14px;
+//     color: #565656;
+//     margin-bottom: 10px !important;
+//     line-height: 28px !important;
+// }
+// h1 {
+// font-size: 35px;
+// color: #141414dd;
+// margin-top: 0px;
+// margin-bottom: 0px;
+// padding-top: 10px;
+// padding-bottom: 5px;
+
+// }
+// h2 {
+// font-size: 35px;
+// color: #141414dd;
+// margin-top: 0px;
+// margin-bottom: 0px;
+// padding-top: 10px;
+// padding-bottom: 5px;
+// }
+// h3 {
+// font-size: 30px;
+// color: #141414dd;
+// margin-top: 0px;
+// margin-bottom: 0px;
+// padding-top: 10px;
+// padding-bottom: 5px;
+// }
+// h4 {
+// font-size: 26px;
+// color: #141414dd;
+// margin-top: 0px;
+// margin-bottom: 0px;
+// padding-top: 10px;
+// padding-bottom: 5px;
+// }
+// h5 {
+// font-size: 24px;
+// color: #141414dd;
+// margin-top: 0px;
+// margin-bottom: 0px;
+// padding-top: 10px;
+// padding-bottom: 5px;
+// }
+// h6 {
+// font-size: 20px;
+// color: #141414dd;
+// margin-top: 0px;
+// margin-bottom: 0px;
+// padding-top: 10px;
+// padding-bottom: 5px;
+// }
+// // .section {
+// // // padding: 30px 0px;
+// // }
+// li {
+//     font-size: 14px;
+//     color: #565656;
+//     margin-bottom: 5px;
+//     line-height: 1.3;
+// }
+// ol, ul {
+//     padding-left: 1rem;
+//     margin-bottom: 5px;
+// }
 img
 {
     width: 100%;
@@ -82,12 +82,12 @@ img
 header img {
 width: auto;
 }
-.row > * {
-padding-right: 10px;
-padding-left: 10px;
-padding-top: 5px;
-padding-bottom: 5px;
-}
+// .row > * {
+// padding-right: 10px;
+// padding-left: 10px;
+// padding-top: 5px;
+// padding-bottom: 5px;
+// }
 .imgBannerMoharlli,
 .imgBannerJunona,
 .imgBannerKhutwanda,
@@ -114,40 +114,40 @@ padding-bottom: 5px;
   width: 100%;
   height: 300px;
 }
-td {
-font-size: 12px;
-color: #000000;
-font-family: "Poppins", sans-serif !important;
-}
-    // td:hover{
-    //     color:#565656;
-    // }
-th {
-font-size: 12px;
-color: #565656;
-font-family: "Poppins", sans-serif !important;
-}
-input {
-font-size: 14px;
-color: #565656;
-outline: none;
-border: 1px solid #565656;
-padding: 5px;
-}
-select
-{
-color: #565656;
-font-size: 14px;
-border: 1px solid #565656;
-padding: 2px 5px;
-outline: none;  
-}
-input::placeholder
-{
-    font-size: 14px;
-}
-.stardes
-{
-    color: #ffd43b;
-    font-size: 14px;
-}
+// td {
+// font-size: 12px;
+// color: #000000;
+// font-family: "Poppins", sans-serif !important;
+// }
+//     // td:hover{
+//     //     color:#565656;
+//     // }
+// th {
+// font-size: 12px;
+// color: #565656;
+// font-family: "Poppins", sans-serif !important;
+// }
+// input {
+// font-size: 14px;
+// color: #565656;
+// outline: none;
+// border: 1px solid #565656;
+// padding: 5px;
+// }
+// select
+// {
+// color: #565656;
+// font-size: 14px;
+// border: 1px solid #565656;
+// padding: 2px 5px;
+// outline: none;  
+// }
+// input::placeholder
+// {
+//     font-size: 14px;
+// }
+// .stardes
+// {
+//     color: #ffd43b;
+//     font-size: 14px;
+// }
